--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@
 VITE_ELITEA_API_URL=https://nexus.elitea.ai/api/v1
 VITE_ELITEA_BEARER_TOKEN=your_bearer_token_here
 VITE_ELITEA_COOKIE=your_cookie_here
+VITE_VAR_X=X
